--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eva-design/eva": "^2.0.0",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/datetimepicker": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.6",
     "@react-navigation/bottom-tabs": "^5.8.0",
@@ -48,6 +49,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-appearance": "~0.3.3",
+    "react-native-date-picker": "^3.3.0",
     "react-native-device-info": "^7.0.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
