--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-snackbar": "^2.2.4",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.0",
+    "react-native-uuid": "^2.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
