--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-constants": "~9.2.0",
     "expo-facebook": "~9.0.0",
     "expo-font": "~8.3.0",
+    "expo-image-picker": "~9.1.1",
     "expo-linear-gradient": "~8.3.0",
     "expo-linking": "^1.0.1",
     "expo-localization": "~9.0.0",
