--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "formik": "^2.2.6",
     "graphql": "^15.5.0",
     "i18n-js": "^3.8.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -55,6 +56,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^10.0.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-safe-area-view": "^1.1.1",
