--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
+    "expo-barcode-scanner": "~9.0.0",
     "expo-blur": "~8.2.0",
     "expo-constants": "~9.2.0",
     "expo-facebook": "~9.0.0",
